# mcp_etrade

./: .gitignore  BALANCE_TOOL_README.md  README.md  balance_tool.py  check_balance.py  demo_balance.py  pyproject.toml  risk_calculator.py  structured_output_example.py
mcp_etrade/: config.py  etrade_client.py  oauth.py  risk_guardrails.py  server.py  watchlists.py
tests/: ACCOUNTS_API_TESTS.md  ORDERS_API_TESTS.md  test_access_token.py  test_access_token_response.py  test_accounts_api.py  test_accounts_tools.py  test_authorization_url.py  test_callback_response.py  test_config.py  test_market_tools.py  test_oauth.py  test_oauth_auth.py  test_oauth_response.py  test_option_chains.py  test_orders_api.py  test_renew_access_token.py  test_risk_calculator.py  test_risk_guardrails.py  test_watch_lists.py
